# dlib_face_recognition_for_digikam

./: CMakeLists.txt  README.md  codes.cpp  dlib_face_recognize.cpp  dlib_face_recognize_shape.cpp  dlib_test.cpp  orltest.txt  orltrain.txt  shape_backup.cpp
opencv-dnn/: main.cpp  vgg1.cpp  vgg2.cpp
